# fps

./: .gitignore  CLAUDE.md  Cargo.toml  IALY_Agent_Brief.md  build.rs
.cargo/: config.toml
.claude/: INTERPOLATION.md
.github/workflows/: build.yml  ci.yml  release.yml
assets/: AppIcon.icns
assets/characters/: male_base.glb
assets/survival-kit/: Axe.glb  Axe_Small.glb  Backpack.glb  Bandages.glb  Battery_Big.glb  Battery_Small.glb  BearTrap_Closed.glb  BearTrap_Open.glb  Bonfire.glb  Bonfire_Fire.glb  Can_Broken.glb  Can_Closed.glb  Can_Open.glb  Can_Red.glb  Compass_Closed.glb  Compass_Open.glb  FirstAidKit.glb  FirstAidKit_Hard.glb  FlareGun.glb  GasCan.glb  Knife.glb  Match.glb  Match_Burnt.glb  Match_Fire.glb  Matchbox.glb  Pan.glb  Pan_Small.glb  Phone.glb  Pistol_1.glb  Pistol_2.glb  Pot.glb  Pot_Small.glb  PropaneTank.glb  Radio.glb  Raft.glb  Raft_Paddle.glb  Revolver_1.glb  Revolver_2.glb  Revolver_3.glb  Shotgun_1.glb  (+13 more)
deploy/: README.md  provision.sh  setup-server.sh
docs/: INTERACTABLES.md  SERVER_MESH_RESEARCH.md
macos/: Info.plist.template  anima-launcher  create-icns.sh
src/: auth.rs  lib.rs  mesh.rs  protocol.rs  solana.rs
src/bot/: mod.rs
src/entities/: mod.rs
src/network/: mod.rs
src/player/: mod.rs
src/world/: mod.rs
