[package]
edition = "2021"
name = "multiplayer"
version = "0.1.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "multiplayer"
path = "src/lib.rs"

[features]
default = ["netcode"]
netcode = []

[dependencies]
bevy = {version = "0.15", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",
  "bevy_pbr",
  "x11",
  "tonemapping_luts",
  "ktx2",
  "zstd",
  "serialize",
  "bevy_window",
]}

bevy_egui = "0.31.1"
bevy_rapier3d = "0.28.0"
bevy_renet = {version = "1.0.0", features = ["netcode"], default-features = false}
bincode = "1.3"
fastrand = "2.0"
renet_visualizer = {version = "*", features = ["bevy"]}
serde = {version = "1.0", features = ["derive"]}
steamworks = {version = "0.11", optional = true}
