[package]
edition = "2021"
name = "multiplayer"
version = "0.3.0"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "multiplayer"
path = "src/lib.rs"

[dependencies]
bevy = {version = "0.18", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_asset",
  "bevy_pbr",
  "bevy_light",
  "bevy_gltf",
  "bevy_window",
  "bevy_state",
  "bevy_log",
  "bevy_scene",
  "bevy_ui",
  "bevy_text",
  "default_font",
  "serialize",
  "x11",
  "tonemapping_luts",
  "ktx2",
  "zstd_rust",
  "png",
  "jpeg",
  "reflect_auto_register",
]}

lightyear = {version = "0.26", features = ["netcode", "udp", "input_bei", "avian3d", "frame_interpolation"]}
avian3d = {version = "0.5", default-features = false, features = ["3d", "f32", "parry-f32", "serialize"]}
bevy_enhanced_input = {version = "0.22", features = ["serialize"]}
bevy_egui = "0.39"
bevy_kira_audio = {version = "0.25", features = ["mp3"]}
serde = {version = "1.0", features = ["derive"]}
